# fastSCSP

./: .gitignore  LICENSE.txt  README.md  Readme.md  Superpixels.py  SuperpixelsWrapper.py  clean_pyc.py  demo.py  demo_NaN.py  demo_for_direc.py  find_border_pixels.py  get_cartoon.py  honeycomb.py  init_seg.py  update_param_iter.py  update_seg_iter.py
cpp/: CMakeLists.txt  RgbLab.cu  RgbLab.h  Superpixels  Superpixels.cpp  Superpixels.h  demo.cpp  demo_for_direc.cpp  init_seg.cu  init_seg.h  my_sp_struct.h  sp.h  sp_helper.h  update_param.cu  update_param.h  update_seg.cu  update_seg.h
gpu/: lab_to_rgb.cu  update_seg.cu  update_seg_NaN.cu
matlab/: 1100_426_11.mat  241_160_11.mat  321_481_11.mat  321_481_15.mat  321_481_5.mat  demo.m  demo_for_direc.m  get_img_border.m  get_img_overlaid.m  init_sp.m  load_all_kernels.m  load_images_in_folder.m  update_param.m  update_seg.m
matlab/gpu/: sp_helper.cu  update_param.cu
matlab/ptx/: get_cartoon.ptx  honeycomb.ptx  lab_to_rgb.ptx  rgb_to_lab.ptx  update_param.ptx  update_seg.ptx
of/gpu/: __init__.py  init_the_device_if_needed.py
of/utils/: __init__.py  _class_bunch.py  _class_files_dirs.py
python/: demo.py  demo_NaN.py
python/image/result/: 1_n_010_std_15.mat  1_n_015_std_15.mat  2_n_010_std_15.mat
python/of/gpu/: CpuGpuArray.py
python/superpixels/: lab_to_rgb.py  rgb_to_lab.py
superpixels/gpu/: get_cartoon.cu  rgb_to_lab.cu
